test/org/midica/testfiles/failing/eff-func-wrong-param-count-1.midica
INCLUDE inc/instruments.midica


0: vol.set(30,40)
